--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -43,7 +43,7 @@
       padding: 0.5em;
       border: none;
       border-radius: 3px;
-      background-color: #007bff;
+      background-color: #75a0ca;
       color: #fff;
       font-size: 1em;
       cursor: pointer;
@@ -51,7 +51,7 @@
     }
 
     .signup-container button:hover {
-      background-color: #0056b3;
+      background-color: #75a0ca;
     }
 
     .signup-container a {
@@ -60,7 +60,7 @@
       padding: 0.5em;
       border: none;
       border-radius: 3px;
-      background-color: #007bff;
+      background-color: #75a0ca;
       color: #fff;
       font-size: 1em;
       cursor: pointer;
@@ -71,7 +71,7 @@
     }
 
     .signup-container a:hover {
-      background-color: #0056b3;
+      background-color: #75a0ca;
     }
   </style>
 </head>
