--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,7 +48,7 @@
             border: 1px solid #ccc;
             border-radius: 8px;
             font-size: 16px;
-            background-color: #d8d7d7;
+            background-color: #f9f9f9;
             margin : 5px;
             margin-right: 30px;
         }
@@ -62,7 +62,7 @@
 
         .form-group button {
             padding: 10px 20px;
-            background-color: #007BFF;
+            background-color: #75a0ca;
             color: #fff;
             border: none;
             border-radius: 4px;
@@ -72,7 +72,7 @@
         }
 
         .form-group button:hover {
-            background-color: #0056b3;
+            background-color: #416d9d;
         }
 
         .previous-questions {
@@ -124,16 +124,16 @@
             margin-left: 10px;
             padding: 10px 20px;
             text-decoration: none;
-            background-color: #007BFF;
+            background-color: #75a0ca;
             color: #fff;
             border-radius: 4px;
             font-size: 16px;
-            margin-right: 10px;
+            margin-right: 10px; 
             
         }
 
         .auth-buttons a:hover {
-            background-color: #0056b3;
+            background-color: #416d9d;
         }
 
         .form-and-questions {
