--- a/views/question.ejs
+++ b/views/question.ejs
@@ -42,7 +42,7 @@
         }
         .answer-form button {
             padding: 10px 20px;
-            background-color: #007BFF;
+            background-color: #75a0ca;
             color: #fff;
             border: none;
             border-radius: 4px;
@@ -51,7 +51,7 @@
             margin-top: 10px;
         }
         .answer-form button:hover {
-            background-color: #0056b3;
+            background-color: #75a0ca;
         }
         .answers-list {
             margin-top: 20px;
@@ -76,13 +76,13 @@
             margin-left: 10px;
             padding: 10px 20px;
             text-decoration: none;
-            background-color: #007BFF;
+            background-color: #75a0ca;
             color: #fff;
             border-radius: 4px;
             font-size: 16px;
         }
         .top-right-buttons a:hover {
-            background-color: #0056b3;
+            background-color: #75a0ca;
         }
     </style>
 </head>
