주석 처리 (<-- phase2 -->)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -178,6 +178,11 @@
                             </div>
                         </form>
                         <div class="previous-questions">
+                            <!------------------------------- phase2 -------------------------------->
+                            <!------------------------------- phase2 -------------------------------->
+                            <!------------------------------- phase2 -------------------------------->
+                            <!------------------------------- phase2 -------------------------------->
+                            <!------------------------------- phase2 -------------------------------->
 
                             <ul>
                                 <% 
@@ -194,6 +199,12 @@
                                 }); 
                                 %>
                             </ul>
+                        <!------------------------------- phase2 -------------------------------->
+                        <!------------------------------- phase2 -------------------------------->
+                        <!------------------------------- phase2 -------------------------------->
+                        <!------------------------------- phase2 -------------------------------->
+                        <!------------------------------- phase2 -------------------------------->
+                        
                         </div>
                     </div>
                 </div>
