--- a/views/question.ejs
+++ b/views/question.ejs
@@ -95,7 +95,11 @@
         <p class="question-content"><%= question.content %></p>
 
         <div class="answers-list">
-            
+            <!------------------------------- phase2 -------------------------------->
+            <!------------------------------- phase2 -------------------------------->
+            <!------------------------------- phase2 -------------------------------->
+            <!------------------------------- phase2 -------------------------------->
+            <!------------------------------- phase2 -------------------------------->
             <h2>답변</h2>
             <ul>
                 <% if (answers.length > 0) { %>
@@ -112,7 +116,13 @@
                 <% } %>                
             </ul>
         </div>
-
+        <!------------------------------- phase2 -------------------------------->
+        <!------------------------------- phase2 -------------------------------->
+        <!------------------------------- phase2 -------------------------------->
+        <!------------------------------- phase2 -------------------------------->
+        <!------------------------------- phase2 -------------------------------->
+        <!------------------------------- phase2 -------------------------------->
+        
         <div class="answer-form">
             <h2>답변 달기</h2>
             <form action="/question/<%= question.id %>/answer" method="POST">
